--- a/app/index.html
+++ b/app/index.html
@@ -6,12 +6,76 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/libs.min.css">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
-
+  <header class="header">
+    <div class="header__top">
+      <div class="container">
+        <div class="header__top-inner">
+          <div class="header__logo">
+            <a href="#">
+              <img src="images/header-logo.png" alt="">
+            </a>
+          </div>
+          <div class="header__seller">
+            <a href="#">
+              Become a Seller
+            </a>
+          </div>
+          <div class="header__box">
+            <a class="card" href="#"></a>
+            <a class="header__btn header__btn-login" href="#">Login</a>
+            <a class="header__btn header__btn-register" href="#">Register</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="header__menu">
+        <nav class="menu">
+          <ul class="menu__list">
+            <li>
+              <a href="#">
+                HOME
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                all products
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                wordpress
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                festures
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                Pages
+              </a>
+            </li>
+          </ul>
+        </nav>
+        <div class="header__search">
+          <form>
+            <input type="text" placeholder="Search product here..." required>
+            <button type="submit">
+              <img src="images/icons/search.png" alt="">
+            </button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </header>
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
