--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,35 @@
     </div>
   </header>
 
+  <section class="search">
+    <div class="container">
+      <div class="search__inner">
+        <div class="search__inner-title">
+          Create Your Own
+          <span>Digital Product Marketplace</span>
+        </div>
+        <div class="search__inner-text">
+          MartPlace is the most powerful, & customizable template for Easy Digital Downloads Products
+        </div>
+        <div class="search__inner-btn">
+          <a class="search__btn search__btn-all" href="#">View All Products</a>
+          <a class="search__btn search__btn-popular" href="#">Popular Products</a>
+        </div>
+        <div class="search__inner-form">
+          <div class="search__bg-1"></div>
+          <div class="search__bg-2"></div>
+          <form>
+            <div class="form__left">
+              <input type="text" placeholder="Search your products..." required>
+              <a href="#" class="search__form-all">All Categories</a>
+            </div>
+            <button class="search__form-now" type="submit">Search Now</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="js/libs.min.js"></script>
