--- a/app/index.html
+++ b/app/index.html
@@ -106,6 +106,52 @@
     </div>
   </section>
 
+  <section class="advantages">
+    <div class="container">
+      <div class="advantages__inner">
+        <div class="advantages__item">
+          <div class="advantages__item-img">
+            <img src="images/advantages/advantages-1.png" alt="">
+          </div>
+          <div class="advantages__item-title">
+            Best UX Research
+          </div>
+          <div class="advantages__item-text">
+            Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+            the mattis, leo quam aliquet diam
+            congue is laoreet elit metus.
+          </div>
+        </div>
+        <div class="advantages__item">
+          <div class="advantages__item-img">
+            <img src="images/advantages/advantages-2.png" alt="">
+          </div>
+          <div class="advantages__item-title">
+            Fully Responsive
+          </div>
+          <div class="advantages__item-text">
+            Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+            the mattis, leo quam aliquet diam
+            congue is laoreet elit metus.
+          </div>
+        </div>
+        <div class="advantages__item">
+          <div class="advantages__item-img">
+            <img src="images/advantages/advantages-3.png" alt="">
+          </div>
+          <div class="advantages__item-title">
+            Buy & Sell Easily
+          </div>
+          <div class="advantages__item-text">
+            Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+            the mattis, leo quam aliquet diam
+            congue is laoreet elit metus.
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="js/libs.min.js"></script>
