--- a/app/index.html
+++ b/app/index.html
@@ -152,10 +152,202 @@
     </div>
   </section>
 
+  <section class="slider__weekly">
+    <div class="container">
+      <div class="slider__inner">
+        <div class="slider__inner-top">
+          <div class="slider__top-title title">
+            Weekly Featured Products
+          </div>
+          <div class="slider__top-btn"></div>
+        </div>
+        <div class="slider__inner-content">
+          <div class="slider__item">
+            <div class="slider__item-left">
+              <img src="images/slider-weekly/slider-image.jpg" alt="">
+            </div>
+            <div class="slider__item-right">
+              <a href="#" class="slider__item-title">
+                One Page Resume Template
+              </a>
+              <div class="slider__item-seller">
+                <a class="item__seller-author" href="#">
+                  <div class="avatar" style="background-image: url(images/slider-weekly/user.jpg);"></div>
+                  <span>AazzTech</span>
+                </a>
+                <a href="#" class="item__seller-platform">
+                  WordPress
+                </a>
+              </div>
+              <div class="slider__item-text">
+                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the mattis, leo quam
+                aliquet congue placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the mattis,
+                leo quam aliquet congue justo ut scelerisque.
+              </div>
+              <div class="slider__item-tag">
+                <ul>
+                  <li>
+                    <a href="#">
+                      website
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      plugin
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      landing page
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <div class="slider__item-box">
+                <div class="slider__box-price">
+                  <a href="#" class="item__box-price">
+                    $10 - $50
+                  </a>
+                  <div class="item__box-hearts box__item">
+                    46
+                  </div>
+                  <div class="item__box-purch box__item">
+                    634
+                  </div>
+                </div>
+                <div class="slider__box-rating">
+                  <div class="rate-star"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="slider__item">
+            <div class="slider__item-left">
+              <img src="images/slider-weekly/slider-image.jpg" alt="">
+            </div>
+            <div class="slider__item-right">
+              <a href="#" class="slider__item-title">
+                One Page Resume Template
+              </a>
+              <div class="slider__item-seller">
+                <a class="item__seller-author" href="#">
+                  <div class="avatar" style="background-image: url(images/slider-weekly/user.jpg);"></div>
+                  <span>AazzTech</span>
+                </a>
+                <a href="#" class="item__seller-platform">
+                  WordPress
+                </a>
+              </div>
+              <div class="slider__item-text">
+                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the mattis, leo quam
+                aliquet congue placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the mattis,
+                leo quam aliquet congue justo ut scelerisque.
+              </div>
+              <div class="slider__item-tag">
+                <ul>
+                  <li>
+                    <a href="#">
+                      website
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      plugin
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      landing page
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <div class="slider__item-box">
+                <div class="slider__box-price">
+                  <a href="#" class="item__box-price">
+                    $10 - $50
+                  </a>
+                  <div class="item__box-hearts box__item">
+                    46
+                  </div>
+                  <div class="item__box-purch box__item">
+                    634
+                  </div>
+                </div>
+                <div class="slider__box-rating">
+                  <div class="rate-star"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="slider__item">
+            <div class="slider__item-left">
+              <img src="images/slider-weekly/slider-image.jpg" alt="">
+            </div>
+            <div class="slider__item-right">
+              <a href="#" class="slider__item-title">
+                One Page Resume Template
+              </a>
+              <div class="slider__item-seller">
+                <a class="item__seller-author" href="#">
+                  <div class="avatar" style="background-image: url(images/slider-weekly/user.jpg);"></div>
+                  <span>AazzTech</span>
+                </a>
+                <a href="#" class="item__seller-platform">
+                  WordPress
+                </a>
+              </div>
+              <div class="slider__item-text">
+                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the mattis, leo quam
+                aliquet congue placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the mattis,
+                leo quam aliquet congue justo ut scelerisque.
+              </div>
+              <div class="slider__item-tag">
+                <ul>
+                  <li>
+                    <a href="#">
+                      website
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      plugin
+                    </a>
+                  </li>
+                  <li>
+                    <a href="#">
+                      landing page
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <div class="slider__item-box">
+                <div class="slider__box-price">
+                  <a href="#" class="item__box-price">
+                    $10 - $50
+                  </a>
+                  <div class="item__box-hearts box__item">
+                    46
+                  </div>
+                  <div class="item__box-purch box__item">
+                    634
+                  </div>
+                </div>
+                <div class="slider__box-rating">
+                  <div class="rate-star"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="js/libs.min.js"></script>
-  <script src="js/main.min.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
