added section products

--- a/app/index.html
+++ b/app/index.html
@@ -155,7 +155,7 @@
   <section class="slider__weekly">
     <div class="container">
       <div class="slider__inner">
-        <div class="slider__inner-top">
+        <div class="slider__inner-top inner__top">
           <div class="slider__top-title title">
             Weekly Featured Products
           </div>
@@ -172,7 +172,7 @@
               </a>
               <div class="slider__item-seller">
                 <a class="item__seller-author" href="#">
-                  <div class="avatar" style="background-image: url(images/slider-weekly/user.jpg);"></div>
+                  <div class="avatar" style="background-image: url(images/icons/user.jpg);"></div>
                   <span>AazzTech</span>
                 </a>
                 <a href="#" class="item__seller-platform">
@@ -231,7 +231,7 @@
               </a>
               <div class="slider__item-seller">
                 <a class="item__seller-author" href="#">
-                  <div class="avatar" style="background-image: url(images/slider-weekly/user.jpg);"></div>
+                  <div class="avatar" style="background-image: url(images/icons/user.jpg);"></div>
                   <span>AazzTech</span>
                 </a>
                 <a href="#" class="item__seller-platform">
@@ -290,7 +290,7 @@
               </a>
               <div class="slider__item-seller">
                 <a class="item__seller-author" href="#">
-                  <div class="avatar" style="background-image: url(images/slider-weekly/user.jpg);"></div>
+                  <div class="avatar" style="background-image: url(images/icons/user.jpg);"></div>
                   <span>AazzTech</span>
                 </a>
                 <a href="#" class="item__seller-platform">
@@ -338,6 +338,285 @@
                 </div>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="products">
+    <div class="container">
+      <div class="products__inner-top inner__top">
+        <div class="products__top-title title">
+          Newest Release Products
+        </div>
+        <div class="products__top-items">
+          <div class="top__items-text">
+            Filter by:
+          </div>
+          <div class="top__items-dots">
+            <div class="top__items-dot"></div>
+            <div class="top__items-dot"></div>
+            <div class="top__items-dot"></div>
+          </div>
+        </div>
+      </div>
+      <div class="products__inner">
+        <div class="products__inner-btn">
+          <button type="button" data-filter=".category-plugins">Plugins</button>
+          <button type="button" data-filter=".category-wordpress">WordPress</button>
+          <button type="button" data-filter=".category-site">Site Template</button>
+          <button type="button" data-filter=".category-psd">PSD Template</button>
+          <button type="button" data-filter=".category-joomla">Joomla</button>
+          <button type="button" data-filter=".category-interface">User Interface</button>
+          <button type="button" data-filter=".category-landing">Landing Page</button>
+          <button type="button" data-filter=".category-software">Software</button>
+        </div>
+        <div class="products__inner-box">
+          <div class="products__item mix category-plugins">
+            <div class="products__item-img" style="background-image: url(images/products/products-blue.jpg);">
+              <div class="products__img">
+                <a href="#" class="products__img-info">More Info</a>
+                <a href="#" class="products__img-demo">Live Demo</a>
+              </div>
+            </div>
+            <div class="products__item-content">
+              <a href="#" class="products__item-title">
+                E-commerce Shopping Cart
+              </a>
+              <div class="products__item-seller">
+                <a class="item__seller-author" href="#">
+                  <div class="avatar" style="background-image: url(images/icons/user.jpg);"></div>
+                  <span>Theme-Valley</span>
+                </a>
+                <a href="#" class="item__seller-platform">
+                  Plugin
+                </a>
+              </div>
+              <div class="products__item-text">
+                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                the mattis, leo quam aliquet congue.
+              </div>
+            </div>
+            <div class="products__item-box">
+              <a href="#" class="item__box-price">
+                $20
+              </a>
+              <div class="item__box-hearts">
+                90
+              </div>
+              <div class="item__box-rating">
+                <div class="rate-star"></div>
+              </div>
+              <div class="item__box-purch">
+                246
+              </div>
+            </div>
+          </div>
+          <div class="products__item mix category-psd">
+            <div class="products__item-img" style="background-image: url(images/products/products-green.jpg);">
+              <div class="products__img">
+                <a href="#" class="products__img-info">More Info</a>
+                <a href="#" class="products__img-demo">Live Demo</a>
+              </div>
+            </div>
+            <div class="products__item-content">
+              <a href="#" class="products__item-title">
+                Marketify Coffee Shop
+              </a>
+              <div class="products__item-seller">
+                <a class="item__seller-author" href="#">
+                  <div class="avatar" style="background-image: url(images/icons/user.jpg);"></div>
+                  <span>EchoTheme</span>
+                </a>
+                <a href="#" class="item__seller-platform item__psd">
+                  PSD
+                </a>
+              </div>
+              <div class="products__item-text">
+                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                the mattis, leo quam aliquet congue.
+              </div>
+            </div>
+            <div class="products__item-box">
+              <a href="#" class="item__box-price">
+                $18
+              </a>
+              <div class="item__box-hearts">
+                48
+              </div>
+              <div class="item__box-rating">
+                <div class="rate-star"></div>
+              </div>
+              <div class="item__box-purch">
+                50
+              </div>
+            </div>
+          </div>
+          <div class="products__item mix category-site">
+            <div class="products__item-img" style="background-image: url(images/products/products-blue.jpg);">
+              <div class="products__img">
+                <a href="#" class="products__img-info">More Info</a>
+                <a href="#" class="products__img-demo">Live Demo</a>
+              </div>
+            </div>
+            <div class="products__item-content">
+              <a href="#" class="products__item-title">
+                Bryson - Portfolio Template
+              </a>
+              <div class="products__item-seller">
+                <a class="item__seller-author" href="#">
+                  <div class="avatar" style="background-image: url(images/icons/user.jpg);"></div>
+                  <span>Artcorner</span>
+                </a>
+                <a href="#" class="item__seller-platform item__html">
+                  HTML
+                </a>
+              </div>
+              <div class="products__item-text">
+                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                the mattis, leo quam aliquet congue.
+              </div>
+            </div>
+            <div class="products__item-box">
+              <a href="#" class="item__box-price">
+                $10
+              </a>
+              <div class="item__box-hearts">
+                56
+              </div>
+              <div class="item__box-rating">
+                <div class="rate-star"></div>
+              </div>
+              <div class="item__box-purch">
+                68
+              </div>
+            </div>
+          </div>
+          <div class="products__item mix category-plugins">
+            <div class="products__item-img" style="background-image: url(images/products/products-blue.jpg);">
+              <div class="products__img">
+                <a href="#" class="products__img-info">More Info</a>
+                <a href="#" class="products__img-demo">Live Demo</a>
+              </div>
+            </div>
+            <div class="products__item-content">
+              <a href="#" class="products__item-title">
+                E-commerce Shopping Cart
+              </a>
+              <div class="products__item-seller">
+                <a class="item__seller-author" href="#">
+                  <div class="avatar" style="background-image: url(images/icons/user.jpg);"></div>
+                  <span>Theme-Valley</span>
+                </a>
+                <a href="#" class="item__seller-platform">
+                  Plugin
+                </a>
+              </div>
+              <div class="products__item-text">
+                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                the mattis, leo quam aliquet congue.
+              </div>
+            </div>
+            <div class="products__item-box">
+              <a href="#" class="item__box-price">
+                $10-50
+              </a>
+              <div class="item__box-hearts">
+                90
+              </div>
+              <div class="item__box-rating">
+                <div class="rate-star"></div>
+              </div>
+              <div class="item__box-purch">
+                246
+              </div>
+            </div>
+          </div>
+          <div class="products__item mix category-psd">
+            <div class="products__item-img" style="background-image: url(images/products/products-green.jpg);">
+              <div class="products__img">
+                <a href="#" class="products__img-info">More Info</a>
+                <a href="#" class="products__img-demo">Live Demo</a>
+              </div>
+            </div>
+            <div class="products__item-content">
+              <a href="#" class="products__item-title">
+                Marketify Coffee Shop
+              </a>
+              <div class="products__item-seller">
+                <a class="item__seller-author" href="#">
+                  <div class="avatar" style="background-image: url(images/icons/user.jpg);"></div>
+                  <span>EchoTheme</span>
+                </a>
+                <a href="#" class="item__seller-platform item__psd">
+                  PSD
+                </a>
+              </div>
+              <div class="products__item-text">
+                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                the mattis, leo quam aliquet congue.
+              </div>
+            </div>
+            <div class="products__item-box">
+              <a href="#" class="item__box-price">
+                $10-50
+              </a>
+              <div class="item__box-hearts">
+                48
+              </div>
+              <div class="item__box-rating">
+                <div class="rate-star"></div>
+              </div>
+              <div class="item__box-purch">
+                50
+              </div>
+            </div>
+          </div>
+          <div class="products__item mix category-site">
+            <div class="products__item-img" style="background-image: url(images/products/products-blue.jpg);">
+              <div class="products__img">
+                <a href="#" class="products__img-info">More Info</a>
+                <a href="#" class="products__img-demo">Live Demo</a>
+              </div>
+            </div>
+            <div class="products__item-content">
+              <a href="#" class="products__item-title">
+                Bryson - Portfolio Template
+              </a>
+              <div class="products__item-seller">
+                <a class="item__seller-author" href="#">
+                  <div class="avatar" style="background-image: url(images/icons/user.jpg);"></div>
+                  <span>Artcorner</span>
+                </a>
+                <a href="#" class="item__seller-platform item__html">
+                  HTML
+                </a>
+              </div>
+              <div class="products__item-text">
+                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                the mattis, leo quam aliquet congue.
+              </div>
+            </div>
+            <div class="products__item-box">
+              <a href="#" class="item__box-price">
+                $10
+              </a>
+              <div class="item__box-hearts">
+                56
+              </div>
+              <div class="item__box-rating">
+                <div class="rate-star"></div>
+              </div>
+              <div class="item__box-purch">
+                68
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="products__btn">
+          <div class="products__inner-link">
+            <a href="#">All New Products</a>
           </div>
         </div>
       </div>
