--- a/app/index.html
+++ b/app/index.html
@@ -1006,17 +1006,58 @@
         </div>
       </section>
 
-
-
-
-
-
-
+      <section class="statistics">
+        <div class="container">
+          <d class="statistics__inner">
+            <div class="statistics__item">
+              <div class="icon-briefcase"></div>
+              <div class="statistics__item-digit statistics__orange">
+                38,436
+              </div>
+              <div class="statistics__item-text">
+                items for sale
+              </div>
+            </div>
+            <div class="statistics__item">
+              <div class="icon-cloud-download"></div>
+              <div class="statistics__item-digit statistics__blue">
+                3,736
+              </div>
+              <div class="statistics__item-text">
+                total sales
+              </div>
+            </div>
+            <div class="statistics__item">
+              <div class="icon-smile-o"></div>
+              <div class="statistics__item-digit statistics__green">
+                2,736
+              </div>
+              <div class="statistics__item-text">
+                happy customers
+              </div>
+            </div>
+            <div class="statistics__item">
+              <div class="icon-group"></div>
+              <div class="statistics__item-digit statistics__red">
+                25,736
+              </div>
+              <div class="statistics__item-text">
+                members
+              </div>
+            </div>
+        </div>
     </div>
+    </section>
 
-    <footer class="footer">
 
-    </footer>
+
+
+
+  </div>
+
+  <footer class="footer">
+
+  </footer>
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
