--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/libs.min.css">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
@@ -1047,6 +1047,106 @@
             </div>
         </div>
     </div>
+    </section>
+
+    <section class="pros">
+      <div class="container">
+        <div class="pros__top">
+          <div class="pros__top-title">
+            Why Choose <span>MartPlace</span>
+          </div>
+          <div class="pros__top-text">
+            Laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats. Lid est
+            laborum dolo rumes fugats untras.
+          </div>
+        </div>
+        <div class="pros__inner">
+          <div class="pros__item">
+            <div class="pros__item-num">
+              01
+            </div>
+            <div class="icon-drivers-license-o"></div>
+            <div class="pros__item-title">
+              One Time Payment
+            </div>
+            <div class="pros__item-text">
+              Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+              the mattis, leo quam aliquet diam
+              congue is laoreet elit metus.
+            </div>
+          </div>
+          <div class="pros__item">
+            <div class="pros__item-num">
+              02
+            </div>
+            <div class="icon-magic"></div>
+            <div class="pros__item-title">
+              Quality Products
+            </div>
+            <div class="pros__item-text">
+              Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+              the mattis, leo quam aliquet diam
+              congue is laoreet elit metus.
+            </div>
+          </div>
+          <div class="pros__item">
+            <div class="pros__item-num">
+              03
+            </div>
+            <div class="icon-lock"></div>
+            <div class="pros__item-title">
+              100% Secure Payment
+            </div>
+            <div class="pros__item-text">
+              Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+              the mattis, leo quam aliquet diam
+              congue is laoreet elit metus.
+            </div>
+          </div>
+          <div class="pros__item">
+            <div class="pros__item-num">
+              04
+            </div>
+            <div class="icon-bar-chart"></div>
+            <div class="pros__item-title">
+              Well Organized Code
+            </div>
+            <div class="pros__item-text">
+              Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+              the mattis, leo quam aliquet diam
+              congue is laoreet elit metus.
+            </div>
+          </div>
+          <div class="pros__item">
+            <div class="pros__item-num">
+              05
+            </div>
+            <div class="icon-leaf"></div>
+            <div class="pros__item-title">
+              Life Time Free Update
+            </div>
+            <div class="pros__item-text">
+              Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+              the mattis, leo quam aliquet diam
+              congue is laoreet elit metus.
+            </div>
+          </div>
+          <div class="pros__item">
+            <div class="pros__item-num">
+              06
+            </div>
+            <div class="icon-phone-square"></div>
+            <div class="pros__item-title">
+              Fast and Friendly Support
+            </div>
+            <div class="pros__item-text">
+              Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+              the mattis, leo quam aliquet diam
+              congue is laoreet elit metus.
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
 
