--- a/app/index.html
+++ b/app/index.html
@@ -623,9 +623,7 @@
               </div>
             </div>
             <div class="products__btn">
-              <div class="products__inner-link">
-                <a href="#">All New Products</a>
-              </div>
+              <a class="products__inner-link" href="#">All New Products</a>
             </div>
           </div>
         </div>
@@ -1149,6 +1147,44 @@
       </div>
     </section>
 
+    <section class="sell">
+      <div class="container-fluid">
+        <div class="sell__inner">
+          <div class="sell__item sell__item-left">
+            <div class="sell__item-img" style="background-image: url(images/icons/sell-cart.png);">
+            </div>
+            <div class="sell__item-bgi">
+            </div>
+            <div class="sell__item-title">
+              Sell Your Products
+            </div>
+            <div class="sell__item-text">
+              Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+              the mattis, leo quam aliquet diamcongue is laoreet elit metus.
+            </div>
+            <a href="#" class="sell__item-button">
+              Become an Author
+            </a>
+          </div>
+          <div class="sell__item sell__item-right">
+            <div class="sell__item-img" style="background-image: url(images/icons/sell-buy.png);">
+            </div>
+            <div class="sell__item-bgi" style="background-image: url(images/sell/sell-right.png);">
+            </div>
+            <div class="sell__item-title">
+              Sell Your Products
+            </div>
+            <div class="sell__item-text">
+              Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+              the mattis, leo quam aliquet diamcongue is laoreet elit metus.
+            </div>
+            <a href="#" class="sell__item-button sell__item-button-purp">
+              Become an Author
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
 
