--- a/app/index.html
+++ b/app/index.html
@@ -1186,6 +1186,117 @@
       </div>
     </section>
 
+    <section class="feedback">
+      <div class="container">
+        <div class="feedback__top">
+          <div class="feedback__top-title pros__top-title">
+            Our Clients <span>Feedback</span>
+          </div>
+          <div class="feedback__top-text pros__top-text">
+            Laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats. Lid est
+            laborum dolo rumes fugats untras.
+          </div>
+        </div>
+        <div class="feedback__content">
+          <div class="feedback__content-inner">
+            <div class="feedback__item">
+              <div class="item__author">
+                <div class="item__author-left">
+                  <a class="item__author-img" href="#" style="background-image: url(images/icons/user-feedback.jpg);">
+                  </a>
+                </div>
+                <div class="item__author-right">
+                  <div class="item__author-right-text">
+                    <a class="item__author-name" href="#">
+                      Taofiqul Hakim
+                    </a>
+                    <div class="item__author-profession">
+                      Product Designer
+                    </div>
+                    <div class="icon-comment-o"></div>
+                  </div>
+                </div>
+              </div>
+              <div class="item__text">
+                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the mattis, leo quam
+                aliquet diam congue is the laoreet elit metus. Nunc placerat mi is id nisi interdum is mollis. Praesent
+                the pharetra, justo ut scelerisque.
+              </div>
+            </div>
+            <div class="feedback__item">
+              <div class="item__author">
+                <div class="item__author-left">
+                  <a class="item__author-img" href="#" style="background-image: url(images/icons/user-feedback.jpg);">
+                  </a>
+                </div>
+                <div class="item__author-right">
+                  <a class="item__author-name" href="#">
+                    Saifullah Al Murtafee
+                  </a>
+                  <div class="item__author-profession">
+                    Product Designer
+                  </div>
+                  <div class="icon-comment-o"></div>
+                </div>
+              </div>
+              <div class="item__text">
+                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the mattis, leo quam
+                aliquet diam congue is the laoreet elit metus. Nunc placerat mi is id nisi interdum is mollis. Praesent
+                the pharetra, justo ut scelerisque.
+              </div>
+            </div>
+            <div class="feedback__item">
+              <div class="item__author">
+                <div class="item__author-left">
+                  <a class="item__author-img" href="#" style="background-image: url(images/icons/user-feedback.jpg);">
+                  </a>
+                </div>
+                <div class="item__author-right">
+                  <a class="item__author-name" href="#">
+                    Taofiqul Hakim
+                  </a>
+                  <div class="item__author-profession">
+                    Product Designer
+                  </div>
+                  <div class="icon-comment-o"></div>
+                </div>
+              </div>
+              <div class="item__text">
+                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the mattis, leo quam
+                aliquet diam congue is the laoreet elit metus. Nunc placerat mi is id nisi interdum is mollis. Praesent
+                the pharetra, justo ut scelerisque.
+              </div>
+            </div>
+            <div class="feedback__item">
+              <div class="item__author">
+                <div class="item__author-left">
+                  <a class="item__author-img" href="#" style="background-image: url(images/icons/user-feedback.jpg);">
+                  </a>
+                </div>
+                <div class="item__author-right">
+                  <a class="item__author-name" href="#">
+                    Saifullah Al Murtafee
+                  </a>
+                  <div class="item__author-profession">
+                    Product Designer
+                  </div>
+                  <div class="icon-comment-o"></div>
+                </div>
+              </div>
+              <div class="item__text">
+                Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque the mattis, leo quam
+                aliquet diam congue is the laoreet elit metus. Nunc placerat mi is id nisi interdum is mollis. Praesent
+                the pharetra, justo ut scelerisque.
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="feedback__btn">
+          <a class="products__inner-link" href="#">View All Reviews</a>
+        </div>
+      </div>
+    </section>
+
 
 
 
