added section news

--- a/app/index.html
+++ b/app/index.html
@@ -1297,6 +1297,113 @@
       </div>
     </section>
 
+    <section class="news">
+      <div class="container">
+        <div class="news__top feedback__top">
+          <div class="feedback__top-title pros__top-title">
+            Latest<span>News</span>
+          </div>
+          <div class="feedback__top-text pros__top-text">
+            Laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats. Lid est
+            laborum dolo rumes fugats untras.
+          </div>
+        </div>
+        <div class="news__content">
+          <div class="news__inner">
+            <div class=" news__item products__item">
+              <div class="news__item-info">
+                <div class="products__item-img" style="background-image: url(images/news/news-img-1.jpg">
+                </div>
+                <div class=" products__item-content">
+                  <a href="#" class="news_item-title products__item-title">
+                    Web Design Trends in 2017
+                  </a>
+                  <div class="products__item-text">
+                    Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                    the mattis, leo quam aliquet congue.
+                  </div>
+                </div>
+              </div>
+              <div class="products__item-box news__item-box">
+                <div class="products__item-box-left">
+                  <div class="item__box-date">
+                    24 Feb 2017
+                  </div>
+                </div>
+                <div class="products__item-box-right">
+                  <div class="item__box-comments">
+                    45
+                  </div>
+                  <div class="item__box-views">
+                    345
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class=" news__item products__item">
+              <div class="news__item-info">
+                <div class="products__item-img" style="background-image: url(images/news/news-img-2.jpg">
+                </div>
+                <div class=" products__item-content">
+                  <a href="#" class="news_item-title products__item-title">
+                    The best advices to start your own project
+                  </a>
+                  <div class="products__item-text">
+                    Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                  </div>
+                </div>
+              </div>
+              <div class="products__item-box news__item-box">
+                <div class="products__item-box-left">
+                  <div class="item__box-date">
+                    15 Mar 2017
+                  </div>
+                </div>
+                <div class="products__item-box-right">
+                  <div class="item__box-comments">
+                    45
+                  </div>
+                  <div class="item__box-views">
+                    345
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class=" news__item products__item">
+              <div class="news__item-info">
+                <div class="products__item-img" style="background-image: url(images/news/news-img-3.jpg">
+                </div>
+                <div class=" products__item-content">
+                  <a href="#" class="news_item-title products__item-title">
+                    Best Related Post Plugin
+                  </a>
+                  <div class="products__item-text">
+                    Nunc placerat mi id nisi interdum mollis. Praesent pharetra, justo ut scelerisque
+                    the mattis, leo quam aliquet congue.
+                  </div>
+                </div>
+              </div>
+              <div class="products__item-box news__item-box">
+                <div class="products__item-box-left">
+                  <div class="item__box-date">
+                    20 Dec 2016
+                  </div>
+                </div>
+                <div class="products__item-box-right">
+                  <div class="item__box-comments">
+                    45
+                  </div>
+                  <div class="item__box-views">
+                    345
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
 
 
 
