added section support & join

--- a/app/index.html
+++ b/app/index.html
@@ -1312,7 +1312,7 @@
           <div class="news__inner">
             <div class=" news__item products__item">
               <div class="news__item-info">
-                <div class="products__item-img" style="background-image: url(images/news/news-img-1.jpg">
+                <div class="products__item-img" style="background-image: url(images/news/news-img-1.jpg);">
                 </div>
                 <div class=" products__item-content">
                   <a href="#" class="news_item-title products__item-title">
@@ -1342,7 +1342,7 @@
             </div>
             <div class=" news__item products__item">
               <div class="news__item-info">
-                <div class="products__item-img" style="background-image: url(images/news/news-img-2.jpg">
+                <div class="products__item-img" style="background-image: url(images/news/news-img-2.jpg);">
                 </div>
                 <div class=" products__item-content">
                   <a href="#" class="news_item-title products__item-title">
@@ -1371,7 +1371,7 @@
             </div>
             <div class=" news__item products__item">
               <div class="news__item-info">
-                <div class="products__item-img" style="background-image: url(images/news/news-img-3.jpg">
+                <div class="products__item-img" style="background-image: url(images/news/news-img-3.jpg);">
                 </div>
                 <div class=" products__item-content">
                   <a href="#" class="news_item-title products__item-title">
@@ -1398,6 +1398,43 @@
                   </div>
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="support">
+      <div class="container">
+        <div class="support__inner">
+          <div class="support__item">
+            <div class="support__item-img" style="background-image: url(images/icons/support-1.png);"></div>
+            <div class="support__item-title">
+              30 Days Money Back <span>Guarantee</span>
+            </div>
+          </div>
+          <div class="support__item">
+            <div class="support__item-img" style="background-image: url(images/icons/support-2.png);"></div>
+            <div class="support__item-title">
+              Fast and Friendly<span class="support__purple">Support</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="join">
+      <div class="join__content" style="background-image: url(images/bg.jpg);">
+        <div class="container">
+          <div class="join__inner">
+            <div class="join__title">
+              Ready to Join Our Marketplace!
+            </div>
+            <div class="join__text">
+              Over 25,000 designers and developers trust the MartPlace.
+            </div>
+            <div class="join__btn">
+              <a class="products__inner-link" href="#">Join Us Today</a>
             </div>
           </div>
         </div>
