--- a/app/index.html
+++ b/app/index.html
@@ -99,7 +99,20 @@
               <form>
                 <div class="form__left">
                   <input type="text" placeholder="Search your products..." required>
-                  <a href="#" class="search__form-all">All Categories</a>
+                  <div href="#" class="search__form-all">
+                    <div class="search__form-all-text">
+                      All Categories
+                    </div>
+                    <div class="search__form-all-menu">
+                      <ul>
+                        <li><button class="search__form-menu-item" href="">Category</button></li>
+                        <li><button class="search__form-menu-item" href="">Category</button></li>
+                        <li><button class="search__form-menu-item" href="">Category</button></li>
+                        <li><button class="search__form-menu-item" href="">Category</button></li>
+                        <li><button class="search__form-menu-item" href="">Category</button></li>
+                      </ul>
+                    </div>
+                  </div>
                 </div>
                 <button class="search__form-now" type="submit">Search Now</button>
               </form>
@@ -167,6 +180,10 @@
               <div class="slider__item">
                 <div class="slider__item-left">
                   <img src="images/slider-weekly/slider-image.jpg" alt="">
+                  <div class="products__img">
+                    <a href="#" class="products__img-info">More Info</a>
+                    <a href="#" class="products__img-demo">Live Demo</a>
+                  </div>
                 </div>
                 <div class="slider__item-right">
                   <a href="#" class="slider__item-title">
@@ -228,6 +245,10 @@
               <div class="slider__item">
                 <div class="slider__item-left">
                   <img src="images/slider-weekly/slider-image.jpg" alt="">
+                  <div class="products__img">
+                    <a href="#" class="products__img-info">More Info</a>
+                    <a href="#" class="products__img-demo">Live Demo</a>
+                  </div>
                 </div>
                 <div class="slider__item-right">
                   <a href="#" class="slider__item-title">
@@ -289,6 +310,10 @@
               <div class="slider__item">
                 <div class="slider__item-left">
                   <img src="images/slider-weekly/slider-image.jpg" alt="">
+                  <div class="products__img">
+                    <a href="#" class="products__img-info">More Info</a>
+                    <a href="#" class="products__img-demo">Live Demo</a>
+                  </div>
                 </div>
                 <div class="slider__item-right">
                   <a href="#" class="slider__item-title">
@@ -366,6 +391,16 @@
                 <div class="top__items-dot"></div>
                 <div class="top__items-dot"></div>
                 <div class="top__items-dot"></div>
+                <div class="dots__menu">
+                  <div class="dots__menu-decor"></div>
+                  <ul>
+                    <li><button class="dots__menu-item dots__menu-item--active">Trending items</button></li>
+                    <li><button class="dots__menu-item">Best seller</button></li>
+                    <li><button class="dots__menu-item">Best rating</button></li>
+                    <li><button class="dots__menu-item">Low price</button></li>
+                    <li><button class="dots__menu-item">High price</button></li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
